fix: visibility of the bg image in mobile view

--- a/08-profile-card/index.css
+++ b/08-profile-card/index.css
@@ -26,30 +26,31 @@ body {
 
 .bg-top {
   position: absolute;
-  top: -50%;
-  left: -20%;
+  top: -25vh; 
+  left: 2vw;
   z-index: -1;
-  max-width: 100%;
+  max-width: 40vw;
 }
 
 .bg-bottom {
   position: absolute;
-  bottom: -50%;
-  right: -20%;
+  bottom: -10vh; 
+  right: 2vw;
   z-index: -1;
-  max-width: 100%;
+  max-width: 40vw; 
 }
 
 .container {
   background-color: #fff;
-  /* width: 100%; */
   max-width: 50rem;
   border-radius: 10px;
 }
-.container:hover{
+
+.container:hover {
   box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.1);
   transition: cubic-bezier(0.075, 0.82, 0.165, 1) 0.3s;
 }
+
 .container article:first-child {
   position: relative;
 }
@@ -123,7 +124,7 @@ body {
   margin-top: 1rem;
   color: #fff;
 }
-.name{
+.name {
   padding-bottom: 7px;
 }
 
@@ -132,22 +133,33 @@ body {
   padding-bottom: 10px;
 }
 
-
-@media (max-width: 768px) {
-  .bg-top,
-  .bg-bottom {
-    width: 80vw;
-  }
+@media (max-width: 1316px) {
   .bg-top {
-    top: 100px;
-    left: 0;
+    top: -25vh; 
+    left: 2vw;
+    max-width: 50vw; 
   }
   
   .bg-bottom {
-    bottom: 100px;
-    right: 0;
+    bottom: -10vh;
+    right: 2vw;
+    max-width: 50vw;
+  }
+}
+
+/* For screens below 946px */
+@media (max-width: 946px) {
+  .bg-top {
+    top: 0%; 
+    left: 2vw;
+    max-width: 65vw;
   }
 
+  .bg-bottom {
+    bottom: 0%; 
+    right: 2vw;
+    max-width: 65vw;
+  }
 }
 
 @media (max-width: 375px) {
@@ -157,12 +169,8 @@ body {
   .container {
     margin: 1rem;
   }
-  .bg-top,
-  .bg-bottom {
-    width: 90vw;
+
+  .bg-top, .bg-bottom {
+    max-width: 100vw; 
   }
 }
-
-
-
-
